--- a/Src/CrossStitch.Backplane.Zyre/packages.config
+++ b/Src/CrossStitch.Backplane.Zyre/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Acquaintance" version="1.0.0-rc3" targetFramework="net462" />
   <package id="AsyncIO" version="0.1.26.0" targetFramework="net462" />
+  <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net462" developmentDependency="true" />
   <package id="NetMQ" version="4.0.0.1" targetFramework="net462" />
   <package id="NetMQ.Zyre" version="1.0.0-rc1" targetFramework="net462" />
 </packages>
