--- a/Src/CrossStitch.Core/CrossStitch.Core.nuspec
+++ b/Src/CrossStitch.Core/CrossStitch.Core.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>CrossStitch.Core</id>
-    <version>0.1.0</version>
+    <version>0.1.0-alpha</version>
     <title>$title$</title>
     <authors>Andrew F. Whitworth</authors>
     <owners>$author$</owners>
@@ -20,8 +20,8 @@
     </dependencies>
   </metadata>
   <files>
-        <file src="bin\Release\net45\CrossStitch.Core.dll" target="lib\net45\CrossStitch.Core.dll" />
-        <file src="bin\Release\net45\CrossStitch.Core.pdb" target="lib\net45\CrossStitch.Core.pdb" />
+        <!-- <file src="bin\Release\net45\CrossStitch.Core.dll" target="lib\net45\CrossStitch.Core.dll" /> -->
+        <!-- <file src="bin\Release\net45\CrossStitch.Core.pdb" target="lib\net45\CrossStitch.Core.pdb" /> -->
         <file src="bin\Release\net46\CrossStitch.Core.dll" target="lib\net46\CrossStitch.Core.dll" />
         <file src="bin\Release\net46\CrossStitch.Core.pdb" target="lib\net46\CrossStitch.Core.pdb" />
     </files>
