--- a/Src/CrossStitch.Core/packages.config
+++ b/Src/CrossStitch.Core/packages.config
@@ -3,4 +3,5 @@
   <package id="Acquaintance" version="1.0.0-rc3" targetFramework="net462" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net462" />
+  <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net462" developmentDependency="true" />
 </packages>
