--- a/Src/CrossStitch.Service/packages.config
+++ b/Src/CrossStitch.Service/packages.config
@@ -3,5 +3,6 @@
   <package id="Acquaintance" version="1.0.0-rc3" targetFramework="net462" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net462" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net462" />
+  <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net462" developmentDependency="true" />
   <package id="Topshelf" version="4.0.3" targetFramework="net452" />
 </packages>
