--- a/Src/CrossStitch.Backplane.Zyre/CrossStitch.Backplane.Zyre.nuspec
+++ b/Src/CrossStitch.Backplane.Zyre/CrossStitch.Backplane.Zyre.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>CrossStitch.Backplane.Zyre</id>
-    <version>0.1.0</version>
+    <version>0.1.0-alpha</version>
     <title>$title$</title>
     <authors>Andrew F. Whitworth</authors>
     <owners>$author$</owners>
@@ -14,15 +14,15 @@
     <tags>AppFabric Microservices Clustering</tags>
     <dependencies>
       <dependency id="CrossStitch.Stitch" version="0.1.0"/>
-      <dependency id="CrossStitch.Core" version="0.1.0"/>
+      <dependency id="CrossStitch.Core" version="0.1.0-alpha"/>
       <dependency id="Acquaintance" version="1.0.0-rc3" />
       <dependency id="NetMQ.Zyre" version="1.0.0-rc1"/>
       <dependency id="Microsoft.CSharp" version="4.0.1"/>
     </dependencies>
   </metadata>
   <files>
-        <file src="bin\Release\net45\CrossStitch.Backplane.Zyre.dll" target="lib\net45\CrossStitch.Backplane.Zyre.dll" />
-        <file src="bin\Release\net45\CrossStitch.Backplane.Zyre.pdb" target="lib\net45\CrossStitch.Backplane.Zyre.pdb" />
+        <!-- <file src="bin\Release\net45\CrossStitch.Backplane.Zyre.dll" target="lib\net45\CrossStitch.Backplane.Zyre.dll" /> -->
+        <!-- <file src="bin\Release\net45\CrossStitch.Backplane.Zyre.pdb" target="lib\net45\CrossStitch.Backplane.Zyre.pdb" /> -->
         <file src="bin\Release\net46\CrossStitch.Backplane.Zyre.dll" target="lib\net46\CrossStitch.Backplane.Zyre.dll" />
         <file src="bin\Release\net46\CrossStitch.Backplane.Zyre.pdb" target="lib\net46\CrossStitch.Backplane.Zyre.pdb" />
     </files>
