[Stitches] Store stitch adaptor information in PackageFile
create new PackageFile model to persist, which holds information about the package and adaptor information.
Update Stitches module to persist the packageFile when the package is uploaded, and Get it when we instantiate the Stitch
Include adaptor information in messages across the backplane

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Models\AdaptorType.cs" />
     <Compile Include="Models\InstanceAdaptorDetails.cs" />
     <Compile Include="Models\InstanceStateType.cs" />
+    <Compile Include="Models\PackageFile.cs" />
     <Compile Include="Models\StitchFullId.cs" />
     <Compile Include="Modules\Master\Handlers\StartAllStitchGroupCommandHandler.cs" />
     <Compile Include="Modules\Master\Handlers\StitchGroupCommandHandler.cs" />
