New abstractions for process comm channels
Add IMessageChannel and IMessageSerializer abstractions to allow pluggability
Add default implementations StdioMessageChannel and JsonMessageSerializer to mimic existing behavior
Comment out some tests which need to be retargetted to the new classes
Update V1 stitch adaptor to create the necessary channel and serializer

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -186,8 +186,8 @@
     <Compile Include="Utility\IMapper.cs" />
     <Compile Include="Utility\IModuleLog.cs" />
     <Compile Include="Utility\NullModuleLog.cs" />
-    <Compile Include="Utility\Serialization\ISerializer.cs" />
-    <Compile Include="Utility\Serialization\JsonSerializer.cs" />
+    <Compile Include="Utility\Serialization\IByteSerializer.cs" />
+    <Compile Include="Utility\Serialization\JsonByteSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CrossStitch.Core.nuspec">
