--- a/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
+++ b/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
@@ -61,36 +61,36 @@
     <Compile Include="BuiltInClassV1\Parameters.cs" />
     <Compile Include="Events\EventHandlerExtensions.cs" />
     <Compile Include="Events\PayloadEventArgs.cs" />
-    <Compile Include="ProcessV1\Parameters.cs" />
+    <Compile Include="Process\IMessageChannel.cs" />
+    <Compile Include="Process\IMessageSerializer.cs" />
+    <Compile Include="Process\JsonMessageSerializer.cs" />
+    <Compile Include="Process\Parameters.cs" />
+    <Compile Include="Process\Stdio\StdioMessageChannel.cs" />
     <Compile Include="Utility\Assert.cs" />
     <Compile Include="Utility\Extensions\DictionaryExtensions.cs" />
     <Compile Include="Utility\Extensions\EnumerableExtensions.cs" />
     <Compile Include="Utility\JsonUtility.cs" />
-    <Compile Include="ProcessV1\Arguments.cs" />
-    <Compile Include="ProcessV1\Core\CoreMessageManager.cs" />
+    <Compile Include="Process\Arguments.cs" />
+    <Compile Include="Process\Core\CoreMessageManager.cs" />
     <Compile Include="CoreStitchContext.cs" />
-    <Compile Include="ProcessV1\Core\FromStitchMessageReader.cs" />
-    <Compile Include="ProcessV1\Core\FromStitchMessageReceivedEventArgs.cs" />
-    <Compile Include="ProcessV1\Core\FromStitchReaderThread.cs" />
-    <Compile Include="ProcessV1\Core\HeartbeatSyncReceivedEventArgs.cs" />
-    <Compile Include="ProcessV1\Core\LogsReceivedEventArgs.cs" />
-    <Compile Include="ProcessV1\Core\RequestResponseReceivedEventArgs.cs" />
-    <Compile Include="ProcessV1\Core\StitchProcessEventArgs.cs" />
-    <Compile Include="ProcessV1\Stitch\StitchMessageManager.cs" />
+    <Compile Include="Process\Core\FromStitchMessageReceivedEventArgs.cs" />
+    <Compile Include="Process\Core\FromStitchReaderThread.cs" />
+    <Compile Include="Process\Core\HeartbeatSyncReceivedEventArgs.cs" />
+    <Compile Include="Process\Core\LogsReceivedEventArgs.cs" />
+    <Compile Include="Process\Core\RequestResponseReceivedEventArgs.cs" />
+    <Compile Include="Process\Core\StitchProcessEventArgs.cs" />
+    <Compile Include="Process\Stitch\StitchMessageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProcessV1\FromStitchMessage.cs" />
-    <Compile Include="ProcessV1\Stitch\IToStitchMessageProcessor.cs" />
-    <Compile Include="ProcessV1\Stitch\ToStitchMessageReader.cs" />
-    <Compile Include="ProcessV1\Stitch\FromStitchMessageSender.cs" />
-    <Compile Include="ProcessV1\ToStitchMessage.cs" />
-    <Compile Include="ProcessV1\Core\ToStitchMessageSender.cs" />
+    <Compile Include="Process\FromStitchMessage.cs" />
+    <Compile Include="Process\Stitch\IToStitchMessageProcessor.cs" />
+    <Compile Include="Process\ToStitchMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CrossStitch.Stitch.nuspec" />
     <None Include="nupkg-build.bat" />
     <None Include="nupkg-publish.bat" />
     <None Include="packages.config" />
-    <None Include="ProcessV1\README.md" />
+    <None Include="Process\README.md" />
     <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
