[Stitches] Cleanups for stitch code
StitchMessageMananger, ProcessStitchAdaptor, etc
Move code into helper classes
Change parent process status checking to happen in GetNextMessage instead of eating up a second thread
Move some code from Core down to Stitch
Refactor argument-parsing and -accessing code out of StitchMessageManager
Misc cleanups and improvements

--- a/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
+++ b/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
@@ -65,14 +65,20 @@
     <Compile Include="Process\IMessageSerializer.cs" />
     <Compile Include="Process\JsonMessageSerializer.cs" />
     <Compile Include="Process\MessageChannelType.cs" />
+    <Compile Include="Process\MessageSerializerFactory.cs" />
     <Compile Include="Process\Parameters.cs" />
     <Compile Include="Process\Pipes\CorePipeMessageChannel.cs" />
     <Compile Include="Process\Pipes\PipeMessageChannel.cs" />
     <Compile Include="Process\Pipes\StitchPipeMessageChannel.cs" />
     <Compile Include="Process\Stdio\StdioMessageChannel.cs" />
+    <Compile Include="Process\Stitch\CrossStitchArguments.cs" />
+    <Compile Include="Process\Stitch\ParsedArguments.cs" />
+    <Compile Include="Process\Stitch\StitchArgumentParser.cs" />
+    <Compile Include="Process\Stitch\StitchMessageChannelFactory.cs" />
     <Compile Include="Utility\Assert.cs" />
     <Compile Include="Utility\Extensions\DictionaryExtensions.cs" />
     <Compile Include="Utility\Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Utility\IFactory.cs" />
     <Compile Include="Utility\JsonUtility.cs" />
     <Compile Include="Process\Arguments.cs" />
     <Compile Include="Process\Core\CoreMessageManager.cs" />
