--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -103,8 +103,10 @@
     <Compile Include="Models\StitchLocaleType.cs" />
     <Compile Include="Modules\Stitches\Adaptors\BuiltInClassV1\BuiltInClassV1Parameters.cs" />
     <Compile Include="Modules\Stitches\Adaptors\BuiltInClassV1\BuiltInClassStitchAdaptor.cs" />
+    <Compile Include="Modules\Stitches\Adaptors\Process\CoreMessageChannelFactory.cs" />
     <Compile Include="Modules\Stitches\Adaptors\Process\ProcessAdaptorData.cs" />
     <Compile Include="Modules\Stitches\Adaptors\Process\ProcessArguments.cs" />
+    <Compile Include="Modules\Stitches\Adaptors\Process\ProcessFactory.cs" />
     <Compile Include="Modules\Stitches\IStitchEventNotifier.cs" />
     <Compile Include="Modules\Master\IStitchRequestHandler.cs" />
     <Compile Include="Modules\Stitches\Adaptors\Process\ProcessParameters.cs" />
@@ -182,7 +184,6 @@
     <Compile Include="CrossStitchCore.cs" />
     <Compile Include="Modules\Master\MasterModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utility\IFactory.cs" />
     <Compile Include="Utility\IMapper.cs" />
     <Compile Include="Utility\IModuleLog.cs" />
     <Compile Include="Utility\NullModuleLog.cs" />
