--- a/Tests/ClusterTest/ClusterTest.Master/packages.config
+++ b/Tests/ClusterTest/ClusterTest.Master/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="Acquaintance" version="1.0.0-rc3" targetFramework="net462" />
   <package id="AsyncIO" version="0.1.26.0" targetFramework="net462" />
-  <package id="Common.Logging" version="3.3.1" targetFramework="net462" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net462" />
+  <package id="Common.Logging" version="3.4.0" targetFramework="net462" />
+  <package id="Common.Logging.Core" version="3.4.0" targetFramework="net462" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net462" />
   <package id="NetMQ" version="4.0.0.1" targetFramework="net462" />
   <package id="NetMQ.Zyre" version="1.0.0-rc1" targetFramework="net462" />
 </packages>
