--- a/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
+++ b/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
@@ -45,8 +45,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Acquaintance, Version=1.0.0.17705, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Acquaintance.1.0.0-rc3\lib\net46\Acquaintance.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\packages\Acquaintance.1.0.0\lib\net46\Acquaintance.dll</HintPath>
     </Reference>
     <Reference Include="Nancy, Version=1.4.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
