--- a/Src/CrossStitch.Backplane.Zyre/packages.config
+++ b/Src/CrossStitch.Backplane.Zyre/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Acquaintance" version="1.0.0-rc3" targetFramework="net462" />
+  <package id="Acquaintance" version="1.0.0" targetFramework="net462" />
   <package id="AsyncIO" version="0.1.26.0" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net462" developmentDependency="true" />
   <package id="NetMQ" version="4.0.0.1" targetFramework="net462" />
