--- a/Src/CrossStitch.Stitch.Tests/CrossStitch.Stitch.Tests.csproj
+++ b/Src/CrossStitch.Stitch.Tests/CrossStitch.Stitch.Tests.csproj
@@ -36,8 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Acquaintance, Version=1.0.0.17705, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Acquaintance.1.0.0-rc3\lib\net46\Acquaintance.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\packages\Acquaintance.1.0.0\lib\net46\Acquaintance.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
