--- a/Tests/StitchIntegration/StitchIntegration.ServerB/StitchIntegration.ServerB.csproj
+++ b/Tests/StitchIntegration/StitchIntegration.ServerB/StitchIntegration.ServerB.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Acquaintance, Version=1.0.0.17705, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Acquaintance.1.0.0-rc3\lib\net46\Acquaintance.dll</HintPath>
+      <HintPath>..\..\..\packages\Acquaintance.1.0.0\lib\net46\Acquaintance.dll</HintPath>
     </Reference>
     <Reference Include="Common.Logging, Version=3.4.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Common.Logging.3.4.0\lib\net40\Common.Logging.dll</HintPath>
